# CLI-BattleShip

./: CMakeLists.txt  Doxyfile  Makefile  README.md
img/: rules.txt
include/: game.hpp
include/animation/: animator.hpp
include/base/: ascii.hpp  cell.hpp  position.hpp
include/logic/: board.hpp  bot.hpp  cursor.hpp  ship.hpp  ship_builder.hpp  shooter.hpp
include/scenes/: game_scene.hpp  main_menu_scene.hpp  rules_scene.hpp  scene.hpp
include/ui/: dialog.hpp  panel.hpp
scenes/: rules_scene.hpp  scene.hpp
src/: CMakeLists.txt  battleship.cpp  game.cpp
src/animation/: animator.cpp
src/base/: ascii.cpp
src/logic/: board.cpp  bot.cpp  cursor.cpp  ship.cpp  ship_builder.cpp  shooter.cpp
src/scenes/: game_scene.cpp  main_menu_scene.cpp  rules_scene.cpp  scene.cpp
src/ui/: dialog.cpp  panel.cpp
tests/: Makefile  tests.cpp
